--- a/electron/splash.html
+++ b/electron/splash.html
@@ -43,7 +43,7 @@
             font-weight: 700;
             margin: 0;
             background: linear-gradient(to right, #60a5fa, #c084fc);
-            -webkit-background-clip: text;
+            background-clip: text;
             -webkit-text-fill-color: transparent;
             letter-spacing: -0.5px;
         }
