style: update branding with new horizontal logo and splash icon

--- a/electron/splash.html
+++ b/electron/splash.html
@@ -103,8 +103,8 @@
 <body>
     <div class="splash-container">
         <div class="logo-section">
-            <h1>Railgun</h1>
-            <p>Visual Bot Architecture</p>
+            <img src="../public/resources/railgun-logo_icon.svg" alt="Railgun"
+                style="height: 64px; margin-bottom: 4px;">
         </div>
 
         <div class="status-section">
