fix: distribution error

--- a/electron/splash.html
+++ b/electron/splash.html
@@ -103,8 +103,7 @@
 <body>
     <div class="splash-container">
         <div class="logo-section">
-            <img src="../public/resources/railgun-logo_full.svg" alt="Railgun"
-                style="height: 40px; margin-bottom: 4px;">
+            <img src="resources/railgun-logo_full.svg" alt="Railgun" style="height: 40px; margin-bottom: 4px;">
         </div>
 
         <div class="status-section">
@@ -115,7 +114,7 @@
         </div>
 
         <div class="footer">
-            <span id="copyright">© 2025 Repyh</span> • v0.0.1 Alpha
+            <span id="copyright">© 2025 Repyh</span> • v0.1.0
         </div>
     </div>
 
